// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots 🚀 Cleanup Components/Selects/PlainSelect PlainSelect 1`] = `
.c8 {
  width: 1em;
  height: 1em;
  stroke-width: 0;
  stroke: currentColor;
  fill: currentColor;
  pointer-events: none;
}

.c7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 24px;
}

.c5 {
  text-transform: none;
  font-size: 0.9375rem;
  font-weight: 700;
  font-family: Lato,Helvetica,Arial,sans-serif;
  text-align: center;
  box-shadow: unset;
  min-width: 88px;
  min-height: 32px;
  padding: 0px 12px;
}

.c5 .RcButton-startIcon {
  margin-right: 8px;
}

.c5 .RcButton-endIcon {
  margin-left: 8px;
}

.c5.RcButton-text {
  color: #066FAC;
}

.c5.RcButton-text.RcButton-disabled {
  color: #B9B9B9;
}

.c5.RcButton-contained {
  color: #fff;
  background-color: #066FAC;
}

.c5.RcButton-contained.RcButton-disabled {
  background-color: #B9B9B9;
  color: #FFFFFF;
}

.c5.RcButton-outlined {
  color: #066FAC;
  border-color: #066FAC;
  padding: 0px 11px;
}

.c5.RcButton-outlined.RcButton-disabled {
  color: #B9B9B9;
  border-color: #B9B9B9;
}

.c5.RcButton-outlined:after {
  top: -1px;
  bottom: -1px;
  left: -1px;
  right: -1px;
  border: 1px solid transparent;
}

.c1 {
  width: 168px;
}

.c1 .RcTextFieldInputLabel-root {
  font-size: 0.75rem;
  font-weight: 700;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 16px;
  color: #666666;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c1 .RcTextFieldInputLabel-focused {
  color: #066FAC;
}

.c1 .RcTextFieldInput-root {
  color: #121212;
}

.c1 .RcTextFieldInput-input {
  font-size: 1rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 24px;
}

.c1 .RcTextFieldInput-input::-webkit-input-placeholder {
  color: #757575;
  opacity: 1;
}

.c1 .RcTextFieldInput-input::-moz-placeholder {
  color: #757575;
  opacity: 1;
}

.c1 .RcTextFieldInput-input:-ms-input-placeholder {
  color: #757575;
  opacity: 1;
}

.c1 .RcTextFieldInput-input::placeholder {
  color: #757575;
  opacity: 1;
}

.c1 .RcTextFieldInput-underline:before {
  border-bottom-color: #939393;
}

.c1 .RcTextFieldInput-underline:after {
  border-bottom-color: #066FAC;
}

.c1 .RcTextFieldInput-error:after {
  border-bottom-color: #BE3933;
}

.c1 .RcTextFieldInput-disabled {
  color: #B9B9B9;
  -webkit-text-fill-color: #B9B9B9;
}

.c1 .RcTextFieldInput-disabled::-webkit-input-placeholder {
  color: #B9B9B9;
}

.c1 .RcTextFieldInput-disabled::-moz-placeholder {
  color: #B9B9B9;
}

.c1 .RcTextFieldInput-disabled:-ms-input-placeholder {
  color: #B9B9B9;
}

.c1 .RcTextFieldInput-disabled::placeholder {
  color: #B9B9B9;
}

.c1 .RcTextFieldInput-disabled:before {
  border-bottom-style: solid;
  border-bottom-color: #B9B9B9;
}

.c1 .RcTextFieldInput-disabled:after {
  border-bottom-style: none;
}

.c1 .RcTextFieldFormHelperText-root {
  font-size: 0.75rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 16px;
  color: #666666;
}

.c1 .RcTextFieldFormHelperText-error,
.c1 .RcTextFieldInputLabel-error {
  color: #BE3933;
}

.c1 .RcTextFieldFormHelperText-disabled,
.c1 .RcTextFieldInputLabel-disabled {
  color: #B9B9B9;
}

.c1 input[type='search']::-ms-clear,
.c1 input[type='search']::-ms-reveal {
  display: none;
  width: 0;
  height: 0;
}

.c1 input[type='search']::-webkit-search-decoration,
.c1 input[type='search']::-webkit-search-cancel-button,
.c1 input[type='search']::-webkit-search-results-button,
.c1 input[type='search']::-webkit-search-results-decoration {
  display: none;
}

.c0 {
  font-size: 1.5rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 32px;
  color: #121212;
}

.c2 .RcSelect-icon {
  color: #666666;
}

.c2 .RcSelectInput-focused .RcSelect-icon {
  color: #066FAC;
}

.c2 .RcSelectInput-error .RcSelect-icon {
  color: #BE3933;
}

.c2 .RcSelectInputWhenPlaceholder-input {
  color: #757575;
}

.c2 .RcSelectInputWhenPlaceholder-input:before {
  content: 'undefined';
  border: none;
}

.c2 .RcSelectInput-disabled {
  color: #B9B9B9;
}

.c2 .RcSelectInput-disabled .RcSelect-icon {
  color: #B9B9B9;
}

.c3 {
  width: auto;
}

.c3 .c4 .c6 {
  margin-right: 0;
}

.c3 .RcTextField-root {
  margin-bottom: 0;
}

.c3 .RcPlainSelectInput-root {
  width: auto;
  pointer-events: none;
}

.c3 .RcPlainSelectInput-input {
  padding: 0;
  height: auto;
}

.c3 .c4 {
  pointer-events: auto;
  min-width: unset;
  padding-left: 16px;
  padding-right: 4px;
}

@media (hover:hover) and (pointer:fine) {
  .c5.RcButton-text:hover {
    background-color: rgba(6,111,172,0.08);
  }
}

@media (hover:hover) and (pointer:fine) {
  .c5.RcButton-contained:hover {
    background-color: rgba(6,111,172,0.92);
  }
}

@media (hover:hover) and (pointer:fine) {
  .c5.RcButton-outlined:hover {
    background-color: rgba(6,111,172,0.08);
  }
}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {
  .c1 .RcTextFieldInput-underline:hover:not(.RcTextFieldInput-disabled):before {
    border-bottom-color: #121212;
  }
}

<div
  className="MuiGrid-root MuiGrid-container"
>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
  >
    <h5
      className="MuiTypography-root c0 MuiTypography-paragraph MuiTypography-displayBlock"
      data-color="neutral.f06"
      data-variant="headline1"
    >
      controlled mode
    </h5>
    <div
      className="MuiFormControl-root MuiTextField-root RcTextField-root c1 c2 c3"
    >
      <div
        className="MuiInputBase-root MuiInput-root RcTextFieldInput-root RcSelectInput-root RcPlainSelectInput-root MuiInputBase-formControl MuiInput-formControl"
        data-test-automation-id="demo"
        onClick={[Function]}
      >
        <div
          className="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input RcTextFieldInput-input RcPlainSelectInput-input"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
        >
          <button
            aria-haspopup="listbox"
            aria-label="open menu"
            className="MuiButtonBase-root MuiButton-root MuiButton-text RcButton-text c4 c5"
            disabled={false}
            onBlur={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiButton-label"
            >
              One
              <span
                className="c6 c7 MuiSvgIcon-root arrow-down icon"
              >
                <svg
                  className="c8"
                  viewBox="0 0 32 32"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m16.707 20.293 5.586-5.586A.999.999 0 0 0 21.586 13H10.414a1 1 0 0 0-.707 1.707l5.586 5.586a.999.999 0 0 0 1.414 0z"
                  />
                </svg>
                
              </span>
            </span>
            <span
              className="MuiTouchRipple-root RcPlainSelect-TouchRipple-root"
            />
          </button>
        </div>
        <input
          aria-hidden={true}
          autoFocus={false}
          className="MuiSelect-nativeInput"
          disabled={false}
          onAnimationStart={[Function]}
          onChange={[Function]}
          required={false}
          tabIndex={-1}
          value={1}
          variant="standard"
        />
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
  >
    <h5
      className="MuiTypography-root c0 MuiTypography-paragraph MuiTypography-displayBlock"
      data-color="neutral.f06"
      data-variant="headline1"
    >
      uncontrolled mode
    </h5>
    <div
      className="MuiFormControl-root MuiTextField-root RcTextField-root c1 c2 c3"
    >
      <div
        className="MuiInputBase-root MuiInput-root RcTextFieldInput-root RcSelectInput-root RcPlainSelectInput-root MuiInputBase-formControl MuiInput-formControl"
        data-test-automation-id="demo"
        onClick={[Function]}
      >
        <div
          className="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input RcTextFieldInput-input RcPlainSelectInput-input"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
        >
          <button
            aria-haspopup="listbox"
            aria-label="open menu"
            className="MuiButtonBase-root MuiButton-root MuiButton-text RcButton-text c4 c5"
            disabled={false}
            onBlur={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiButton-label"
            >
              One
              <span
                className="c6 c7 MuiSvgIcon-root arrow-down icon"
              >
                <svg
                  className="c8"
                  viewBox="0 0 32 32"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m16.707 20.293 5.586-5.586A.999.999 0 0 0 21.586 13H10.414a1 1 0 0 0-.707 1.707l5.586 5.586a.999.999 0 0 0 1.414 0z"
                  />
                </svg>
                
              </span>
            </span>
            <span
              className="MuiTouchRipple-root RcPlainSelect-TouchRipple-root"
            />
          </button>
        </div>
        <input
          aria-hidden={true}
          autoFocus={false}
          className="MuiSelect-nativeInput"
          disabled={false}
          onAnimationStart={[Function]}
          onChange={[Function]}
          required={false}
          tabIndex={-1}
          value={1}
          variant="standard"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots 🚀 Cleanup Components/Selects/PlainSelect PlainSelect Examples 1`] = `
.c8 {
  width: 1em;
  height: 1em;
  stroke-width: 0;
  stroke: currentColor;
  fill: currentColor;
  pointer-events: none;
}

.c7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 24px;
}

.c5 {
  text-transform: none;
  font-size: 0.9375rem;
  font-weight: 700;
  font-family: Lato,Helvetica,Arial,sans-serif;
  text-align: center;
  box-shadow: unset;
  min-width: 88px;
  min-height: 32px;
  padding: 0px 12px;
}

.c5 .RcButton-startIcon {
  margin-right: 8px;
}

.c5 .RcButton-endIcon {
  margin-left: 8px;
}

.c5.RcButton-text {
  color: #066FAC;
}

.c5.RcButton-text.RcButton-disabled {
  color: #B9B9B9;
}

.c5.RcButton-contained {
  color: #fff;
  background-color: #066FAC;
}

.c5.RcButton-contained.RcButton-disabled {
  background-color: #B9B9B9;
  color: #FFFFFF;
}

.c5.RcButton-outlined {
  color: #066FAC;
  border-color: #066FAC;
  padding: 0px 11px;
}

.c5.RcButton-outlined.RcButton-disabled {
  color: #B9B9B9;
  border-color: #B9B9B9;
}

.c5.RcButton-outlined:after {
  top: -1px;
  bottom: -1px;
  left: -1px;
  right: -1px;
  border: 1px solid transparent;
}

.c10 {
  text-transform: none;
  font-size: 0.9375rem;
  font-weight: 700;
  font-family: Lato,Helvetica,Arial,sans-serif;
  text-align: center;
  box-shadow: unset;
}

.c10 .RcButton-startIcon {
  margin-right: 8px;
  margin-left: 0;
}

.c10 .RcButton-endIcon {
  margin-left: 8px;
  margin-right: 0;
}

.c10.RcButton-text {
  color: #066FAC;
  padding: 4px;
  min-width: unset;
  line-height: 1;
}

.c10.RcButton-text.RcButton-disabled {
  color: #B9B9B9;
}

.c10.RcButton-text.focus-visible,
.c10.RcButton-text[data-focus-visible-added] {
  box-shadow: inset 0 0 0 1px #066FAC;
}

.c10.RcButton-text:active.RcButton-text {
  color: rgba(6,111,172,0.64);
}

.c10.RcButton-contained {
  color: #fff;
  background-color: #066FAC;
}

.c10.RcButton-contained.RcButton-disabled {
  background-color: #B9B9B9;
  color: #FFFFFF;
}

.c10.RcButton-outlined {
  color: #066FAC;
  border-color: #066FAC;
  padding: 0px 11px;
}

.c10.RcButton-outlined.RcButton-disabled {
  color: #B9B9B9;
  border-color: #B9B9B9;
}

.c10.RcButton-outlined:after {
  top: -1px;
  bottom: -1px;
  left: -1px;
  right: -1px;
  border: 1px solid transparent;
}

.c17 {
  text-transform: none;
  font-size: 0.9375rem;
  font-weight: 700;
  font-family: Lato,Helvetica,Arial,sans-serif;
  text-align: center;
  box-shadow: unset;
  min-width: 88px;
  min-height: 32px;
  padding: 0px 12px;
}

.c17 .RcButton-startIcon {
  margin-right: 8px;
}

.c17 .RcButton-endIcon {
  margin-left: 8px;
}

.c17.RcButton-text {
  color: #46BE59;
}

.c17.RcButton-text.RcButton-disabled {
  color: #B9B9B9;
}

.c17.RcButton-contained {
  color: rgba(0,0,0,0.87);
  background-color: #46BE59;
}

.c17.RcButton-contained.RcButton-disabled {
  background-color: #B9B9B9;
  color: #FFFFFF;
}

.c17.RcButton-outlined {
  color: #46BE59;
  border-color: #46BE59;
  padding: 0px 11px;
}

.c17.RcButton-outlined.RcButton-disabled {
  color: #B9B9B9;
  border-color: #B9B9B9;
}

.c17.RcButton-outlined:after {
  top: -1px;
  bottom: -1px;
  left: -1px;
  right: -1px;
  border: 1px solid transparent;
}

.c18 {
  text-transform: none;
  font-size: 0.9375rem;
  font-weight: 700;
  font-family: Lato,Helvetica,Arial,sans-serif;
  text-align: center;
  box-shadow: unset;
}

.c18 .RcButton-startIcon {
  margin-right: 8px;
  margin-left: 0;
}

.c18 .RcButton-endIcon {
  margin-left: 8px;
  margin-right: 0;
}

.c18.RcButton-text {
  color: #46BE59;
  padding: 4px;
  min-width: unset;
  line-height: 1;
}

.c18.RcButton-text.RcButton-disabled {
  color: #B9B9B9;
}

.c18.RcButton-text.focus-visible,
.c18.RcButton-text[data-focus-visible-added] {
  box-shadow: inset 0 0 0 1px #46BE59;
}

.c18.RcButton-text:active.RcButton-text {
  color: rgba(70,190,89,0.64);
}

.c18.RcButton-contained {
  color: rgba(0,0,0,0.87);
  background-color: #46BE59;
}

.c18.RcButton-contained.RcButton-disabled {
  background-color: #B9B9B9;
  color: #FFFFFF;
}

.c18.RcButton-outlined {
  color: #46BE59;
  border-color: #46BE59;
  padding: 0px 11px;
}

.c18.RcButton-outlined.RcButton-disabled {
  color: #B9B9B9;
  border-color: #B9B9B9;
}

.c18.RcButton-outlined:after {
  top: -1px;
  bottom: -1px;
  left: -1px;
  right: -1px;
  border: 1px solid transparent;
}

.c1 {
  width: 168px;
}

.c1 .RcTextFieldInputLabel-root {
  font-size: 0.75rem;
  font-weight: 700;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 16px;
  color: #666666;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c1 .RcTextFieldInputLabel-focused {
  color: #066FAC;
}

.c1 .RcTextFieldInput-root {
  color: #121212;
}

.c1 .RcTextFieldInput-input {
  font-size: 1rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 24px;
}

.c1 .RcTextFieldInput-input::-webkit-input-placeholder {
  color: #757575;
  opacity: 1;
}

.c1 .RcTextFieldInput-input::-moz-placeholder {
  color: #757575;
  opacity: 1;
}

.c1 .RcTextFieldInput-input:-ms-input-placeholder {
  color: #757575;
  opacity: 1;
}

.c1 .RcTextFieldInput-input::placeholder {
  color: #757575;
  opacity: 1;
}

.c1 .RcTextFieldInput-underline:before {
  border-bottom-color: #939393;
}

.c1 .RcTextFieldInput-underline:after {
  border-bottom-color: #066FAC;
}

.c1 .RcTextFieldInput-error:after {
  border-bottom-color: #BE3933;
}

.c1 .RcTextFieldInput-disabled {
  color: #B9B9B9;
  -webkit-text-fill-color: #B9B9B9;
}

.c1 .RcTextFieldInput-disabled::-webkit-input-placeholder {
  color: #B9B9B9;
}

.c1 .RcTextFieldInput-disabled::-moz-placeholder {
  color: #B9B9B9;
}

.c1 .RcTextFieldInput-disabled:-ms-input-placeholder {
  color: #B9B9B9;
}

.c1 .RcTextFieldInput-disabled::placeholder {
  color: #B9B9B9;
}

.c1 .RcTextFieldInput-disabled:before {
  border-bottom-style: solid;
  border-bottom-color: #B9B9B9;
}

.c1 .RcTextFieldInput-disabled:after {
  border-bottom-style: none;
}

.c1 .RcTextFieldFormHelperText-root {
  font-size: 0.75rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 16px;
  color: #666666;
}

.c1 .RcTextFieldFormHelperText-error,
.c1 .RcTextFieldInputLabel-error {
  color: #BE3933;
}

.c1 .RcTextFieldFormHelperText-disabled,
.c1 .RcTextFieldInputLabel-disabled {
  color: #B9B9B9;
}

.c1 input[type='search']::-ms-clear,
.c1 input[type='search']::-ms-reveal {
  display: none;
  width: 0;
  height: 0;
}

.c1 input[type='search']::-webkit-search-decoration,
.c1 input[type='search']::-webkit-search-cancel-button,
.c1 input[type='search']::-webkit-search-results-button,
.c1 input[type='search']::-webkit-search-results-decoration {
  display: none;
}

.c15 {
  width: 168px;
}

.c15 .RcTextFieldInputLabel-root {
  font-size: 0.75rem;
  font-weight: 700;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 16px;
  color: #46BE59;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c15 .RcTextFieldInputLabel-focused {
  color: #46BE59;
}

.c15 .RcTextFieldInput-root {
  color: #121212;
}

.c15 .RcTextFieldInput-input {
  font-size: 1rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 24px;
}

.c15 .RcTextFieldInput-input::-webkit-input-placeholder {
  color: #757575;
  opacity: 1;
}

.c15 .RcTextFieldInput-input::-moz-placeholder {
  color: #757575;
  opacity: 1;
}

.c15 .RcTextFieldInput-input:-ms-input-placeholder {
  color: #757575;
  opacity: 1;
}

.c15 .RcTextFieldInput-input::placeholder {
  color: #757575;
  opacity: 1;
}

.c15 .RcTextFieldInput-underline:before {
  border-bottom-color: #46BE59;
}

.c15 .RcTextFieldInput-underline:after {
  border-bottom-color: #46BE59;
}

.c15 .RcTextFieldInput-error:after {
  border-bottom-color: #BE3933;
}

.c15 .RcTextFieldInput-disabled {
  color: #B9B9B9;
  -webkit-text-fill-color: #B9B9B9;
}

.c15 .RcTextFieldInput-disabled::-webkit-input-placeholder {
  color: #B9B9B9;
}

.c15 .RcTextFieldInput-disabled::-moz-placeholder {
  color: #B9B9B9;
}

.c15 .RcTextFieldInput-disabled:-ms-input-placeholder {
  color: #B9B9B9;
}

.c15 .RcTextFieldInput-disabled::placeholder {
  color: #B9B9B9;
}

.c15 .RcTextFieldInput-disabled:before {
  border-bottom-style: solid;
  border-bottom-color: #B9B9B9;
}

.c15 .RcTextFieldInput-disabled:after {
  border-bottom-style: none;
}

.c15 .RcTextFieldFormHelperText-root {
  font-size: 0.75rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 16px;
  color: #666666;
}

.c15 .RcTextFieldFormHelperText-error,
.c15 .RcTextFieldInputLabel-error {
  color: #BE3933;
}

.c15 .RcTextFieldFormHelperText-disabled,
.c15 .RcTextFieldInputLabel-disabled {
  color: #B9B9B9;
}

.c15 input[type='search']::-ms-clear,
.c15 input[type='search']::-ms-reveal {
  display: none;
  width: 0;
  height: 0;
}

.c15 input[type='search']::-webkit-search-decoration,
.c15 input[type='search']::-webkit-search-cancel-button,
.c15 input[type='search']::-webkit-search-results-button,
.c15 input[type='search']::-webkit-search-results-decoration {
  display: none;
}

.c0 {
  font-size: 0.9375rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 22px;
  color: #666666;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: auto;
  height: unset;
  color: inherit;
  min-width: unset;
}

.c13 {
  padding: 0;
  margin: 0 8px 0 0;
}

.c13.RcListItemText-multiline {
  margin: 4px 8px 4px 0px;
}

.c13.RcListItemText-inset {
  padding-left: 56px;
}

.c13 .RcListItemText-primary {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-text-decoration-line: inherit;
  text-decoration-line: inherit;
  font-size: 0.9375rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 22px;
  color: inherit;
}

.c13 .RcListItemText-secondary {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-text-decoration-line: inherit;
  text-decoration-line: inherit;
  font-size: 0.75rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 16px;
  color: #666666;
}

.c2 .RcSelect-icon {
  color: #666666;
}

.c2 .RcSelectInput-focused .RcSelect-icon {
  color: #066FAC;
}

.c2 .RcSelectInput-error .RcSelect-icon {
  color: #BE3933;
}

.c2 .RcSelectInputWhenPlaceholder-input {
  color: #757575;
}

.c2 .RcSelectInputWhenPlaceholder-input:before {
  content: 'undefined';
  border: none;
}

.c2 .RcSelectInput-disabled {
  color: #B9B9B9;
}

.c2 .RcSelectInput-disabled .RcSelect-icon {
  color: #B9B9B9;
}

.c16 .RcSelect-icon {
  color: #666666;
}

.c16 .RcSelectInput-focused .RcSelect-icon {
  color: #46BE59;
}

.c16 .RcSelectInput-error .RcSelect-icon {
  color: #BE3933;
}

.c16 .RcSelectInputWhenPlaceholder-input {
  color: #757575;
}

.c16 .RcSelectInputWhenPlaceholder-input:before {
  content: 'undefined';
  border: none;
}

.c16 .RcSelectInput-disabled {
  color: #B9B9B9;
}

.c16 .RcSelectInput-disabled .RcSelect-icon {
  color: #B9B9B9;
}

.c3 {
  width: auto;
}

.c3 .c4 .c6 {
  margin-right: 0;
}

.c3 .c12 {
  margin-right: 0;
}

.c3 .RcTextField-root {
  margin-bottom: 0;
}

.c3 .RcPlainSelectInput-root {
  width: auto;
  pointer-events: none;
}

.c3 .RcPlainSelectInput-input {
  padding: 0;
  height: auto;
}

.c3 .c4 {
  pointer-events: auto;
  min-width: unset;
  padding-left: 16px;
  padding-right: 4px;
}

.c9 {
  width: auto;
}

.c9 .c4 .c6 {
  margin-right: 0;
}

.c9 .c12 {
  margin-right: 0;
}

.c9 .RcTextField-root {
  margin-bottom: 0;
}

.c9 .RcPlainSelectInput-root {
  width: auto;
  pointer-events: none;
}

.c9 .RcPlainSelectInput-input {
  padding: 0;
  height: auto;
}

.c9 .c4 {
  pointer-events: auto;
  min-width: unset;
  padding-left: 4px;
  padding-right: 0px;
}

.c14 {
  width: auto;
}

.c14 .c4 .c6 {
  margin-right: 0;
}

.c14 .c12 {
  margin-right: 0;
}

.c14 .RcTextField-root {
  margin-bottom: 0;
}

.c14 .RcPlainSelectInput-root {
  width: auto;
  pointer-events: none;
}

.c14 .RcPlainSelectInput-input {
  padding: 0;
  height: auto;
}

.c14 .c4 {
  pointer-events: auto;
  min-width: unset;
  padding-left: 4px;
  padding-right: 0px;
  border-radius: 16px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c14 .c4.focus-visible .RcPlainSelect-TouchRipple-root,
.c14 .c4[data-focus-visible-added] .RcPlainSelect-TouchRipple-root {
  background-color: currentColor;
  opacity: 0.32;
}

.c14 .c4.focus-visible .RcPlainSelect-TouchRipple-child,
.c14 .c4[data-focus-visible-added] .RcPlainSelect-TouchRipple-child {
  display: none;
}

@media (hover:hover) and (pointer:fine) {
  .c5.RcButton-text:hover {
    background-color: rgba(6,111,172,0.08);
  }
}

@media (hover:hover) and (pointer:fine) {
  .c5.RcButton-contained:hover {
    background-color: rgba(6,111,172,0.92);
  }
}

@media (hover:hover) and (pointer:fine) {
  .c5.RcButton-outlined:hover {
    background-color: rgba(6,111,172,0.08);
  }
}

@media (hover:hover) and (pointer:fine) {
  .c10.RcButton-text:hover {
    background-color: rgba(6,111,172,0.08);
  }
}

@media (hover:hover) and (pointer:fine) {
  .c10.RcButton-text:hover {
    color: rgba(6,111,172,0.8);
    background-color: transparent;
  }
}

@media (hover:hover) and (pointer:fine) {
  .c10.RcButton-contained:hover {
    background-color: rgba(6,111,172,0.92);
  }
}

@media (hover:hover) and (pointer:fine) {
  .c10.RcButton-outlined:hover {
    background-color: rgba(6,111,172,0.08);
  }
}

@media (hover:hover) and (pointer:fine) {
  .c17.RcButton-text:hover {
    background-color: rgba(70,190,89,0.08);
  }
}

@media (hover:hover) and (pointer:fine) {
  .c17.RcButton-contained:hover {
    background-color: rgba(70,190,89,0.92);
  }
}

@media (hover:hover) and (pointer:fine) {
  .c17.RcButton-outlined:hover {
    background-color: rgba(70,190,89,0.08);
  }
}

@media (hover:hover) and (pointer:fine) {
  .c18.RcButton-text:hover {
    background-color: rgba(70,190,89,0.08);
  }
}

@media (hover:hover) and (pointer:fine) {
  .c18.RcButton-text:hover {
    color: rgba(70,190,89,0.8);
    background-color: transparent;
  }
}

@media (hover:hover) and (pointer:fine) {
  .c18.RcButton-contained:hover {
    background-color: rgba(70,190,89,0.92);
  }
}

@media (hover:hover) and (pointer:fine) {
  .c18.RcButton-outlined:hover {
    background-color: rgba(70,190,89,0.08);
  }
}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {
  .c1 .RcTextFieldInput-underline:hover:not(.RcTextFieldInput-disabled):before {
    border-bottom-color: #121212;
  }
}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {
  .c15 .RcTextFieldInput-underline:hover:not(.RcTextFieldInput-disabled):before {
    border-bottom-color: #46BE59;
  }
}

<div
  className="MuiBox-root MuiBox-root-218"
>
  <div>
    <p
      className="MuiTypography-root c0"
      data-color="neutral.f04"
      data-variant="body1"
    >
      text
    </p>
    <div
      className="MuiFormControl-root MuiTextField-root RcTextField-root c1 c2 c3"
    >
      <div
        className="MuiInputBase-root MuiInput-root RcTextFieldInput-root RcSelectInput-root RcPlainSelectInput-root MuiInputBase-formControl MuiInput-formControl"
        onClick={[Function]}
      >
        <div
          className="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input RcTextFieldInput-input RcPlainSelectInput-input"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
        >
          <button
            aria-haspopup="listbox"
            aria-label="open menu"
            className="MuiButtonBase-root MuiButton-root MuiButton-text RcButton-text c4 c5"
            disabled={false}
            onBlur={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiButton-label"
            >
              One
              <span
                className="c6 c7 MuiSvgIcon-root arrow-down icon"
              >
                <svg
                  className="c8"
                  viewBox="0 0 32 32"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m16.707 20.293 5.586-5.586A.999.999 0 0 0 21.586 13H10.414a1 1 0 0 0-.707 1.707l5.586 5.586a.999.999 0 0 0 1.414 0z"
                  />
                </svg>
                
              </span>
            </span>
            <span
              className="MuiTouchRipple-root RcPlainSelect-TouchRipple-root"
            />
          </button>
        </div>
        <input
          aria-hidden={true}
          autoFocus={false}
          className="MuiSelect-nativeInput"
          disabled={false}
          onAnimationStart={[Function]}
          onChange={[Function]}
          required={false}
          tabIndex={-1}
          value={1}
          variant="standard"
        />
      </div>
    </div>
    <br />
    <br />
    <p
      className="MuiTypography-root c0"
      data-color="neutral.f04"
      data-variant="body1"
    >
      plain
    </p>
    <div
      className="MuiFormControl-root MuiTextField-root RcTextField-root c1 c2 c9"
    >
      <div
        className="MuiInputBase-root MuiInput-root RcTextFieldInput-root RcSelectInput-root RcPlainSelectInput-root MuiInputBase-formControl MuiInput-formControl"
        onClick={[Function]}
      >
        <div
          className="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input RcTextFieldInput-input RcPlainSelectInput-input"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
        >
          <button
            aria-haspopup="listbox"
            aria-label="open menu"
            className="MuiButtonBase-root MuiButton-root MuiButton-text RcButton-text c4 c10"
            disabled={false}
            onBlur={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiButton-label"
            >
              <div
                className="MuiListItemIcon-root c11"
              >
                <span
                  className="c6 c7 bubble_lines_border icon"
                >
                  <svg
                    className="c8"
                    viewBox="0 0 32 32"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M22 9a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2h-4.586a.997.997 0 0 0-.707.293l-3.141 3.141a.8.8 0 0 1-1.131 0l-3.141-3.141A1 1 0 0 0 8.587 25H4.001a2 2 0 0 1-2-2V11a2 2 0 0 1 2-2h18zm-1 2H5a1 1 0 0 0-1 1v10a1 1 0 0 0 1 1h4a2 2 0 0 1 1.414.586L13 26.172l2.586-2.586A2 2 0 0 1 17 23h4a1 1 0 0 0 1-1V12a1 1 0 0 0-1-1zm7-8a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2h-3v-2h2a1 1 0 0 0 1-1V6a1 1 0 0 0-1-1H11a1 1 0 0 0-1 1v2H8V5a2 2 0 0 1 2-2h18z"
                    />
                  </svg>
                  
                </span>
              </div>
              <div
                className="MuiListItemText-root c12 c13"
              >
                <span
                  className="MuiTypography-root MuiListItemText-primary RcListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
                >
                  One
                </span>
              </div>
              <span
                className="c6 c7 MuiSvgIcon-root arrow-down icon"
              >
                <svg
                  className="c8"
                  viewBox="0 0 32 32"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m16.707 20.293 5.586-5.586A.999.999 0 0 0 21.586 13H10.414a1 1 0 0 0-.707 1.707l5.586 5.586a.999.999 0 0 0 1.414 0z"
                  />
                </svg>
                
              </span>
            </span>
          </button>
        </div>
        <input
          aria-hidden={true}
          autoFocus={false}
          className="MuiSelect-nativeInput"
          disabled={false}
          onAnimationStart={[Function]}
          onChange={[Function]}
          required={false}
          tabIndex={-1}
          value={1}
          variant="standard"
        />
      </div>
    </div>
    <br />
    <br />
    <p
      className="MuiTypography-root c0"
      data-color="neutral.f04"
      data-variant="body1"
    >
      round
    </p>
    <div
      className="MuiFormControl-root MuiTextField-root RcTextField-root c1 c2 c14"
    >
      <div
        className="MuiInputBase-root MuiInput-root RcTextFieldInput-root RcSelectInput-root RcPlainSelectInput-root MuiInputBase-formControl MuiInput-formControl"
        onClick={[Function]}
      >
        <div
          className="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input RcTextFieldInput-input RcPlainSelectInput-input"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
        >
          <button
            aria-haspopup="listbox"
            aria-label="open menu"
            className="MuiButtonBase-root MuiButton-root MuiButton-text RcButton-text c4 c5"
            disabled={false}
            onBlur={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiButton-label"
            >
              <span
                className="c6 c7 bubble_lines_border icon"
              >
                <svg
                  className="c8"
                  viewBox="0 0 32 32"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M22 9a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2h-4.586a.997.997 0 0 0-.707.293l-3.141 3.141a.8.8 0 0 1-1.131 0l-3.141-3.141A1 1 0 0 0 8.587 25H4.001a2 2 0 0 1-2-2V11a2 2 0 0 1 2-2h18zm-1 2H5a1 1 0 0 0-1 1v10a1 1 0 0 0 1 1h4a2 2 0 0 1 1.414.586L13 26.172l2.586-2.586A2 2 0 0 1 17 23h4a1 1 0 0 0 1-1V12a1 1 0 0 0-1-1zm7-8a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2h-3v-2h2a1 1 0 0 0 1-1V6a1 1 0 0 0-1-1H11a1 1 0 0 0-1 1v2H8V5a2 2 0 0 1 2-2h18z"
                  />
                </svg>
                
              </span>
              <span
                className="c6 c7 MuiSvgIcon-root arrow-down icon"
              >
                <svg
                  className="c8"
                  viewBox="0 0 32 32"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m16.707 20.293 5.586-5.586A.999.999 0 0 0 21.586 13H10.414a1 1 0 0 0-.707 1.707l5.586 5.586a.999.999 0 0 0 1.414 0z"
                  />
                </svg>
                
              </span>
            </span>
            <span
              className="MuiTouchRipple-root RcPlainSelect-TouchRipple-root"
            />
          </button>
        </div>
        <input
          aria-hidden={true}
          autoFocus={false}
          className="MuiSelect-nativeInput"
          disabled={false}
          onAnimationStart={[Function]}
          onChange={[Function]}
          required={false}
          tabIndex={-1}
          value={1}
          variant="standard"
        />
      </div>
    </div>
    <br />
    <br />
    <p
      className="MuiTypography-root c0"
      data-color="neutral.f04"
      data-variant="body1"
    >
      plainIcon
    </p>
    <div
      className="MuiFormControl-root MuiTextField-root RcTextField-root c1 c2 c14"
    >
      <div
        className="MuiInputBase-root MuiInput-root RcTextFieldInput-root RcSelectInput-root RcPlainSelectInput-root MuiInputBase-formControl MuiInput-formControl"
        onClick={[Function]}
      >
        <div
          className="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input RcTextFieldInput-input RcPlainSelectInput-input"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
        >
          <button
            aria-haspopup="listbox"
            aria-label="open menu"
            className="MuiButtonBase-root MuiButton-root MuiButton-text RcButton-text c4 c10"
            disabled={false}
            onBlur={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiButton-label"
            >
              <span
                className="c6 c7 bubble_lines_border icon"
              >
                <svg
                  className="c8"
                  viewBox="0 0 32 32"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M22 9a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2h-4.586a.997.997 0 0 0-.707.293l-3.141 3.141a.8.8 0 0 1-1.131 0l-3.141-3.141A1 1 0 0 0 8.587 25H4.001a2 2 0 0 1-2-2V11a2 2 0 0 1 2-2h18zm-1 2H5a1 1 0 0 0-1 1v10a1 1 0 0 0 1 1h4a2 2 0 0 1 1.414.586L13 26.172l2.586-2.586A2 2 0 0 1 17 23h4a1 1 0 0 0 1-1V12a1 1 0 0 0-1-1zm7-8a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2h-3v-2h2a1 1 0 0 0 1-1V6a1 1 0 0 0-1-1H11a1 1 0 0 0-1 1v2H8V5a2 2 0 0 1 2-2h18z"
                  />
                </svg>
                
              </span>
              <span
                className="c6 c7 MuiSvgIcon-root arrow-down icon"
              >
                <svg
                  className="c8"
                  viewBox="0 0 32 32"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m16.707 20.293 5.586-5.586A.999.999 0 0 0 21.586 13H10.414a1 1 0 0 0-.707 1.707l5.586 5.586a.999.999 0 0 0 1.414 0z"
                  />
                </svg>
                
              </span>
            </span>
          </button>
        </div>
        <input
          aria-hidden={true}
          autoFocus={false}
          className="MuiSelect-nativeInput"
          disabled={false}
          onAnimationStart={[Function]}
          onChange={[Function]}
          required={false}
          tabIndex={-1}
          value={1}
          variant="standard"
        />
      </div>
    </div>
  </div>
  <div>
    <p
      className="MuiTypography-root c0"
      data-color="neutral.f04"
      data-variant="body1"
    >
      text
    </p>
    <div
      className="MuiFormControl-root MuiTextField-root RcTextField-root c15 c16 c3"
    >
      <div
        className="MuiInputBase-root MuiInput-root RcTextFieldInput-root RcSelectInput-root RcPlainSelectInput-root MuiInputBase-formControl MuiInput-formControl"
        onClick={[Function]}
      >
        <div
          className="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input RcTextFieldInput-input RcPlainSelectInput-input"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
        >
          <button
            aria-haspopup="listbox"
            aria-label="open menu"
            className="MuiButtonBase-root MuiButton-root MuiButton-text RcButton-text c4 c17"
            disabled={false}
            onBlur={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiButton-label"
            >
              One
              <span
                className="c6 c7 MuiSvgIcon-root arrow-down icon"
              >
                <svg
                  className="c8"
                  viewBox="0 0 32 32"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m16.707 20.293 5.586-5.586A.999.999 0 0 0 21.586 13H10.414a1 1 0 0 0-.707 1.707l5.586 5.586a.999.999 0 0 0 1.414 0z"
                  />
                </svg>
                
              </span>
            </span>
            <span
              className="MuiTouchRipple-root RcPlainSelect-TouchRipple-root"
            />
          </button>
        </div>
        <input
          aria-hidden={true}
          autoFocus={false}
          className="MuiSelect-nativeInput"
          disabled={false}
          onAnimationStart={[Function]}
          onChange={[Function]}
          required={false}
          tabIndex={-1}
          value={1}
          variant="standard"
        />
      </div>
    </div>
    <br />
    <br />
    <p
      className="MuiTypography-root c0"
      data-color="neutral.f04"
      data-variant="body1"
    >
      plain
    </p>
    <div
      className="MuiFormControl-root MuiTextField-root RcTextField-root c15 c16 c9"
    >
      <div
        className="MuiInputBase-root MuiInput-root RcTextFieldInput-root RcSelectInput-root RcPlainSelectInput-root MuiInputBase-formControl MuiInput-formControl"
        onClick={[Function]}
      >
        <div
          className="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input RcTextFieldInput-input RcPlainSelectInput-input"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
        >
          <button
            aria-haspopup="listbox"
            aria-label="open menu"
            className="MuiButtonBase-root MuiButton-root MuiButton-text RcButton-text c4 c18"
            disabled={false}
            onBlur={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiButton-label"
            >
              <div
                className="MuiListItemIcon-root c11"
              >
                <span
                  className="c6 c7 bubble_lines_border icon"
                >
                  <svg
                    className="c8"
                    viewBox="0 0 32 32"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M22 9a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2h-4.586a.997.997 0 0 0-.707.293l-3.141 3.141a.8.8 0 0 1-1.131 0l-3.141-3.141A1 1 0 0 0 8.587 25H4.001a2 2 0 0 1-2-2V11a2 2 0 0 1 2-2h18zm-1 2H5a1 1 0 0 0-1 1v10a1 1 0 0 0 1 1h4a2 2 0 0 1 1.414.586L13 26.172l2.586-2.586A2 2 0 0 1 17 23h4a1 1 0 0 0 1-1V12a1 1 0 0 0-1-1zm7-8a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2h-3v-2h2a1 1 0 0 0 1-1V6a1 1 0 0 0-1-1H11a1 1 0 0 0-1 1v2H8V5a2 2 0 0 1 2-2h18z"
                    />
                  </svg>
                  
                </span>
              </div>
              <div
                className="MuiListItemText-root c12 c13"
              >
                <span
                  className="MuiTypography-root MuiListItemText-primary RcListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
                >
                  One
                </span>
              </div>
              <span
                className="c6 c7 MuiSvgIcon-root arrow-down icon"
              >
                <svg
                  className="c8"
                  viewBox="0 0 32 32"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m16.707 20.293 5.586-5.586A.999.999 0 0 0 21.586 13H10.414a1 1 0 0 0-.707 1.707l5.586 5.586a.999.999 0 0 0 1.414 0z"
                  />
                </svg>
                
              </span>
            </span>
          </button>
        </div>
        <input
          aria-hidden={true}
          autoFocus={false}
          className="MuiSelect-nativeInput"
          disabled={false}
          onAnimationStart={[Function]}
          onChange={[Function]}
          required={false}
          tabIndex={-1}
          value={1}
          variant="standard"
        />
      </div>
    </div>
    <br />
    <br />
    <p
      className="MuiTypography-root c0"
      data-color="neutral.f04"
      data-variant="body1"
    >
      round
    </p>
    <div
      className="MuiFormControl-root MuiTextField-root RcTextField-root c15 c16 c14"
    >
      <div
        className="MuiInputBase-root MuiInput-root RcTextFieldInput-root RcSelectInput-root RcPlainSelectInput-root MuiInputBase-formControl MuiInput-formControl"
        onClick={[Function]}
      >
        <div
          className="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input RcTextFieldInput-input RcPlainSelectInput-input"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
        >
          <button
            aria-haspopup="listbox"
            aria-label="open menu"
            className="MuiButtonBase-root MuiButton-root MuiButton-text RcButton-text c4 c17"
            disabled={false}
            onBlur={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiButton-label"
            >
              <span
                className="c6 c7 bubble_lines_border icon"
              >
                <svg
                  className="c8"
                  viewBox="0 0 32 32"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M22 9a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2h-4.586a.997.997 0 0 0-.707.293l-3.141 3.141a.8.8 0 0 1-1.131 0l-3.141-3.141A1 1 0 0 0 8.587 25H4.001a2 2 0 0 1-2-2V11a2 2 0 0 1 2-2h18zm-1 2H5a1 1 0 0 0-1 1v10a1 1 0 0 0 1 1h4a2 2 0 0 1 1.414.586L13 26.172l2.586-2.586A2 2 0 0 1 17 23h4a1 1 0 0 0 1-1V12a1 1 0 0 0-1-1zm7-8a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2h-3v-2h2a1 1 0 0 0 1-1V6a1 1 0 0 0-1-1H11a1 1 0 0 0-1 1v2H8V5a2 2 0 0 1 2-2h18z"
                  />
                </svg>
                
              </span>
              <span
                className="c6 c7 MuiSvgIcon-root arrow-down icon"
              >
                <svg
                  className="c8"
                  viewBox="0 0 32 32"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m16.707 20.293 5.586-5.586A.999.999 0 0 0 21.586 13H10.414a1 1 0 0 0-.707 1.707l5.586 5.586a.999.999 0 0 0 1.414 0z"
                  />
                </svg>
                
              </span>
            </span>
            <span
              className="MuiTouchRipple-root RcPlainSelect-TouchRipple-root"
            />
          </button>
        </div>
        <input
          aria-hidden={true}
          autoFocus={false}
          className="MuiSelect-nativeInput"
          disabled={false}
          onAnimationStart={[Function]}
          onChange={[Function]}
          required={false}
          tabIndex={-1}
          value={1}
          variant="standard"
        />
      </div>
    </div>
    <br />
    <br />
    <p
      className="MuiTypography-root c0"
      data-color="neutral.f04"
      data-variant="body1"
    >
      plainIcon
    </p>
    <div
      className="MuiFormControl-root MuiTextField-root RcTextField-root c15 c16 c14"
    >
      <div
        className="MuiInputBase-root MuiInput-root RcTextFieldInput-root RcSelectInput-root RcPlainSelectInput-root MuiInputBase-formControl MuiInput-formControl"
        onClick={[Function]}
      >
        <div
          className="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input RcTextFieldInput-input RcPlainSelectInput-input"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
        >
          <button
            aria-haspopup="listbox"
            aria-label="open menu"
            className="MuiButtonBase-root MuiButton-root MuiButton-text RcButton-text c4 c18"
            disabled={false}
            onBlur={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiButton-label"
            >
              <span
                className="c6 c7 bubble_lines_border icon"
              >
                <svg
                  className="c8"
                  viewBox="0 0 32 32"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M22 9a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2h-4.586a.997.997 0 0 0-.707.293l-3.141 3.141a.8.8 0 0 1-1.131 0l-3.141-3.141A1 1 0 0 0 8.587 25H4.001a2 2 0 0 1-2-2V11a2 2 0 0 1 2-2h18zm-1 2H5a1 1 0 0 0-1 1v10a1 1 0 0 0 1 1h4a2 2 0 0 1 1.414.586L13 26.172l2.586-2.586A2 2 0 0 1 17 23h4a1 1 0 0 0 1-1V12a1 1 0 0 0-1-1zm7-8a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2h-3v-2h2a1 1 0 0 0 1-1V6a1 1 0 0 0-1-1H11a1 1 0 0 0-1 1v2H8V5a2 2 0 0 1 2-2h18z"
                  />
                </svg>
                
              </span>
              <span
                className="c6 c7 MuiSvgIcon-root arrow-down icon"
              >
                <svg
                  className="c8"
                  viewBox="0 0 32 32"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m16.707 20.293 5.586-5.586A.999.999 0 0 0 21.586 13H10.414a1 1 0 0 0-.707 1.707l5.586 5.586a.999.999 0 0 0 1.414 0z"
                  />
                </svg>
                
              </span>
            </span>
          </button>
        </div>
        <input
          aria-hidden={true}
          autoFocus={false}
          className="MuiSelect-nativeInput"
          disabled={false}
          onAnimationStart={[Function]}
          onChange={[Function]}
          required={false}
          tabIndex={-1}
          value={1}
          variant="standard"
        />
      </div>
    </div>
  </div>
</div>
`;
